WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
299551
[ safaridriver ] dblclick not being issued
https://bugs.webkit.org/show_bug.cgi?id=299551
Summary
[ safaridriver ] dblclick not being issued
Franco Vieira de Souza
Reported
2025-09-25 13:53:08 PDT
Safaridriver does not issue a `dblclick` event when running the following sequence: (in the WPT test `event-timing/dblclick.html`) ``` actions.pointerMove(0, 0, {origin: target}) // target is just some div .pointerDown() .pointerUp() .pointerDown() .pointerUp() // Reset by clicking outside of the target. .pointerMove(0, 0) .pointerDown() ``` This test passes when running on WKTR.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryan Reno
Comment 1
2025-09-26 09:56:41 PDT
rdar://problem/161399867
Franco Vieira de Souza
Comment 2
2025-09-28 20:58:51 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/51481
EWS
Comment 3
2025-10-02 14:33:24 PDT
Committed
300900@main
(5e03e11ba5bc): <
https://commits.webkit.org/300900@main
> Reviewed commits have been landed. Closing PR #51481 and removing active labels.
Franco Vieira de Souza
Comment 4
2025-10-09 12:29:41 PDT
Reopened Bugzilla. REGRESSION(
300900@main
): dblclick tests regressed, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=300456
.
Franco Vieira de Souza
Comment 5
2025-10-14 15:05:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/52327
EWS
Comment 6
2025-10-17 09:28:40 PDT
Committed
301726@main
(2f785577a336): <
https://commits.webkit.org/301726@main
> Reviewed commits have been landed. Closing PR #52327 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug