[ safaridriver ] dblclick not being issued https://bugs.webkit.org/show_bug.cgi?id=299551 rdar://161399867

Reviewed by Abrar Rahman Protyasha and BJ Burg.

Simulated MouseUps and MouseDowns through WebDriver now contain the
correct value for clickCount, triggering the doubleclick detection
downstream. This required a code change to make sure m_clickCount
always has the correct value.

This patch introduces m_lastPosition and updateLastPosition() to
decouple mouse delta calculation and multiple click detection.
Previously, m_lastClickPosition and updateClickCount() were overloaded,
being used to detect multiple clicks on GTK and to calculate mouse
deltas on Mac. On Mac, updateClickCount() had to be called on every
simulated mouse event (instead of only on mousedowns), which would
result in a clobbered m_clickCount.

This patch causes imported/w3c/web-platform-tests/event-timing/dblclick.html
to pass on safaridriver (previously passing only on WKTR). No changes were
observed on imported/w3c/web-platform-tests/pointerevents tests.

Canonical link: https://commits.webkit.org/300900@main